# synthetic-images-tradeoff

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_experiments.py
config/: experiment_config.yaml  quick_test.yaml
src/: __init__.py
src/core/: __init__.py  interfaces.py  trainer.py
src/data/: __init__.py  datasets.py  processor.py
src/experiments/: __init__.py  orchestrator.py
src/fidelity/: __init__.py  metrics.py  pipeline.py
src/metrics/: fidelity.py
src/models/: __init__.py  components.py  diffusion.py  diffusion_old.py  gan.py  reducers.py  sampler.py  scheduler.py  vae.py
src/privacy/: __init__.py  analysis.py  cnn_reducers.py  estimator.py  pipeline.py  reducer_comparison.py  reducer_manager.py
src/utility/: __init__.py  evaluator.py  metrics.py  pipeline.py  visualizers.py
src/visualization/: __init__.py  common.py  config.py  fidelity.py  privacy.py  reducers.py  utility.py
