[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-images-tradeoff"
version = "1.0.0"
description = "Synthetic Images Tradeoff Analysis - Privacy-Utility-Fidelity evaluation framework for generative models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Tradeoff Analysis Team"}
]
keywords = ["machine learning", "privacy", "synthetic data", "generative models", "differential privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "opacus>=1.4.0",
    "mlflow>=2.0.0",
    "numpy>=1.24.0,<2.4",
    "medmnist>=2.2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0.0",
    "opencv-python>=4.5.0",
    "tqdm>=4.60.0",
    "scipy>=1.7.0",
    "torchmetrics>=1.0.0",
    "torch-fidelity>=0.3.0",
    "pillow>=8.0.0",
    "pandas>=2.0.0",
    "grad-cam>=1.4.0",
    "umap-learn>=0.5.0",
    "numba>=0.56.0",
    "llvmlite>=0.40.0",
    "pynndescent>=0.5.0",
    "requests>=2.25.0",
    "scikit-image>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/BorjaArroyo/synthetic-images-tradeoff"
Documentation = "https://github.com/BorjaArroyo/synthetic-images-tradeoff#readme"
Repository = "https://github.com/BorjaArroyo/synthetic-images-tradeoff"
Issues = "https://github.com/BorjaArroyo/synthetic-images-tradeoff/issues"

[project.scripts]
synthetic-images-tradeoff = "run_experiments:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"] 